vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__declarations__tests__package_instantiation.snap
---
source: vhdl_syntax/src/parser/productions/declarations.rs
expression: "to_test_text(Parser::package_instantiation_declaration,\n\"package ident is new lib.foo.bar;\",)"
---
PackageInstantiationDeclarationItem
  PackageInstantiationDeclaration
    PackageInstantiationPreamble
      Keyword(Package)
      Identifier 'ident'
      Keyword(Is)
      Keyword(New)
      Name
        NameDesignatorPrefix
          Identifier 'lib'
        SelectedName
          Dot
          Identifier 'foo'
        SelectedName
          Dot
          Identifier 'bar'
    SemiColon
